--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,17 @@ requests = "^2.31.0"
 colorama = "^0.4.6"
 python-dotenv = "^1.0.1"
 
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project.urls]
+Homepage = "https://github.com/vishalnandagopal/reddit-cli"
+Issues = "https://github.com/vishalnandagopal/reddit-cli/issues"
+
+
+[project.scripts]
+reddit-cli = "reddit_cli.run:run"
+
+[tool.poetry.scripts]
+reddit-cli = "reddit_cli.run:run"
