--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,33 @@
-[tool.poetry]
+[project]
 name = "creddit"
-version = "1.0.0"
+version = "0.0.2"
 description = "An unofficial cli client for Reddit, aimed at people who regularly browse specific subreddits or topics instead of reading the homepage (r/all)."
-authors = ["Vishal N <dev@vishalnandagopal.com>"]
-license = "MIT License"
+authors = [
+    {name = "Vishal Nandagopal", email="dev@vishalnandagopal.com"}
+]
+license = "MIT"
 readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "colorama>=0.4.6",
+    "python-dotenv>=1.1.0",
+    "requests>=2.32.3",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-requests = "^2.31.0"
-colorama = "^0.4.6"
-python-dotenv = "^1.0.1"
+[dependency-groups]
+dev = [
+    "mypy>=1.15.0",
+    "ruff>=0.11.9",
+    "ty>=0.0.0a8",
+    "types-colorama>=0.4.15.20240311",
+    "types-requests>=2.32.0.20250328",
+]
 
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.8.0"
-ruff = "^0.2.2"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[project.urls]
-Homepage = "https://github.com/vishalnandagopal/creddit"
-Repository = "https://github.com/vishalnandagopal/creddit"
-Issues = "https://github.com/vishalnandagopal/creddit/issues"
-
-[project.scripts]
-creddit = "creddit.terminal:run"
-
-[tool.poetry.scripts]
-creddit = "creddit.terminal:run"
+[tool.uv]
+required-environments = [
+    "sys_platform == 'darwin'",
+    "sys_platform == 'linux'",
+    "sys_platform == 'windows'"
+]
+required-version = ">=0.7"
