--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -6,9 +6,6 @@ permissions:
 on:
   push:
     tags: ["v*.*.*"]
-    branches: [master]
-  release:
-    types: [created]
   workflow_dispatch:
 
 jobs:
@@ -31,7 +28,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version-file: ".python-version"
-          cache: "pip"
 
       - name: "Setup uv"
         uses: astral-sh/setup-uv@6b9c6063abd6010835644d4c2e1bef4cf5cd0fca
@@ -40,7 +36,7 @@ jobs:
 
       - name: "Install dependencies"
         run: |
-          uv sync
+          uv sync --no-default-groups --locked
 
       - name: "Build package"
         run: |
